--- a/v1/bugGame.html
+++ b/v1/bugGame.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>buggamehomepage</title>
+    <title>Document</title>
 </head>
 <body>
-    <button id="bugGame1">Bug Game 1</button>
+    
 </body>
 </html>
