--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>buggamehomepage</title>
 </head>
 <body>
-    <button id="bugGame1">Bug Game 1</button>
+    <a href="bugGame.html"><button id="bugGame1">Bug Game 1</button></a>
 </body>
 </html>
