--- a/v1/bugGame.html
+++ b/v1/bugGame.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Xenomorph Incremental Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Xenomorph Incremental Game</h1>
+    <div id="resources">
+        <p>Biomass: <span id="biomnassCount">0</span></p>
+        <p>Biomass per second: <span id="biomassPerSecond">0</span></p>
+    </div>
+    <button id="clickBiomass">Collect Biomass</button>
+    <button id="buyUpgrade">Buy Upgrade (Cost: 10 Biomass)</button>
     
+    <script src="script.js"></script>
 </body>
 </html>
