--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>buggamehomepage</title>
 </head>
 <body>
-    <a href="bugGame.html"><button id="bugGame1">Bug Game 1</button></a>
+    <a href="v1/bugGame.html"><button id="bugGame1">Bug Game 1</button></a>
 </body>
 </html>
