--- a/v1/bugGame.html
+++ b/v1/bugGame.html
@@ -15,6 +15,6 @@
     <button id="clickBiomass">Collect Biomass</button>
     <button id="buyUpgrade">Buy Upgrade (Cost: 10 Biomass)</button>
     
-    <script src="script.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
