--- a/v1/bugGame.html
+++ b/v1/bugGame.html
@@ -11,7 +11,7 @@
     <h1>Xenomorph Incremental Game</h1>
     <button id = save onclick="save()">save</button>
     <button id = load onclick="load()">load</button>
-    <button id = restart onclick="restart()">Restart</button>
+    <button id = restart onclick="reset()">Reset</button>
     <div id="resources">
         <p>Biomass: <span id="biomassCount">0</span></p>
         <p>Biomass per second: <span id="biomassPerSecond">0</span></p>
