--- a/cauldron/cauldron.html
+++ b/cauldron/cauldron.html
@@ -22,18 +22,18 @@
                     <button id="forge">Forge</button>
                 </div>
                 <div id="actions">
-                    <button id="button1">Mine Metal</button>
-                    <button id="button2">Refine Blaze</button>
-                    <button id="button3">nullnullnullnullnullnullnullnull</button>
-                    <button id="button4">null</button>
-                    <button id="button5">null</button>
-                    <button id="button6">null</button>
-                    <button id="button7">null</button>
-                    <button id="button8">null</button>
-                    <button id="button9">null</button>
-                    <button id="button10">null</button>
-                    <button id="button11">null</button>
-                    <button id="button12">null</button>
+                    <button id="button1" class="button">Mine Metal</button>
+                    <button id="button2" class="button">Refine Blaze</button>
+                    <button id="button3" class="button">null</button>
+                    <button id="button4" class="button">null</button>
+                    <button id="button5" class="button">null</button>
+                    <button id="button6" class="button">null</button>
+                    <button id="button7" class="button">null</button>
+                    <button id="button8" class="button">null</button>
+                    <button id="button9" class="button">null</button>
+                    <button id="button10" class="button">null</button>
+                    <button id="button11" class="button">null</button>
+                    <button id="button12" class="button">null</button>
                     
                 </div>
             </div>
