--- a/Source reforming/bugGame.html
+++ b/Source reforming/bugGame.html
@@ -57,6 +57,8 @@
     <div id="World" class="tabContent">
 
     </div>
+    <script type="module" src="scripts/big boi files.js"></script>
+    <script src="scripts/bigboifile.js"></script>
     <script src="player.js"></script>
     <script src="game.js"></script>
     <script src="ui.js"></script>
